--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <title>Pong clone game</title>
     <script src="phaser.min.js"></script>
+    <script src="main.js" async></script>
     <style type="text/css"></style>
-    <script src="app.js" async></script>
 </head>
 
 <body>
