updated game file for OOP part2

--- a/index.html
+++ b/index.html
@@ -5,27 +5,11 @@
     <meta charset="UTF-8" />
     <title>Pong clone game</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
-    <script src="main.js" async></script>
+    <script src="main2.js"></script>
     <style type="text/css"></style>
 </head>
 
 <body>
-    <script type="text/javascript">
-        const config = {
-            type: Phaser.AUTO,
-            width: 1000,
-            height: 600,
-            physics: {
-                default: 'arcade',
-                arcade: {
-                    gravity: { y: 0 },
-                    debug: false
-                }
-            },
-            scene: [Boot, Preloader, Game]
-        };
-        const game = new Phaser.Game(config);
-    </script>
 </body>
 
 </html>
