--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Azetude Game</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
-    <script src="main3.js"></script>
+    <script src="main.js"></script>
     <style type="text/css"></style>
 </head>
 
