made several changes
5-8-24 Continued working on victory screen and high score screen. Figured out that DREAM MMA font only works
with lower case letters, otherwise capital letters will display in a generic font.  Changed the background of
the victory screen.  Figured out the logic for user initials input (limit it to a certain number of characters
    and allow them to backspace if they want to enter a different name).

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Azetude Game</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
     <script src="main.js"></script>
-    <style type="text/css"></style>
+    <link rel="stylesheet" href="graphics.css">
+
 </head>
 
 <body>
+    <p>HELLO RANIA.  HELLO CARLOS.</p>
+    <p>hello rania. hello carlos.</p>
 </body>
 
 </html>
